radix-transactions/tests/assets/manifest_generator_error_intent_cannot_be_used_as_value_kind_1.rtm
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "my_method"
    Array<Intent>()
;